adding private tags with migration
