# open-api/immich-openapi-specs.json
@@ -12541,6 +12541,10 @@
             "pattern": "^#?([0-9A-F]{3}|[0-9A-F]{4}|[0-9A-F]{6}|[0-9A-F]{8})$",
             "type": "string"
           },
+          "isPrivate": {
+            "default": false,
+            "type": "boolean"
+          },
           "name": {
             "type": "string"
           },
@@ -12551,6 +12555,7 @@
           }
         },
         "required": [
+          "isPrivate",
           "name"
         ],
         "type": "object"
@@ -12566,6 +12571,9 @@
           },
           "id": {
             "type": "string"
+          },
+          "isPrivate": {
+            "type": "boolean"
           },
           "name": {
             "type": "string"
@@ -12595,8 +12603,15 @@
           "color": {
             "nullable": true,
             "type": "string"
+          },
+          "isPrivate": {
+            "default": false,
+            "type": "boolean"
           }
         },
+        "required": [
+          "isPrivate"
+        ],
         "type": "object"
       },
       "TagUpsertDto": {
